--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+ Hola Mundo My Name is Victor no joda!!!.
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
