--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,9 +6,11 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
- Hola Mundo My Name is Victor no joda!!!.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+ 
+  <div #map id="map"></div>
+
 </ion-content>
+
+
+
