--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,16 +1,48 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
+    <ion-title class="encabezado">
+      SeoK
     </ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content>
- 
-  <div #map id="map"></div>
-
+<ion-content padding>
+  <div class="contenido">
+    <ion-card>
+      <ion-card-header>
+        Iniciar Sesión
+      </ion-card-header>    
+      <ion-card-content>
+          <ion-item>
+            <ion-label color="primary">Usuario</ion-label>
+            <ion-input placeholder="Usuario"></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label color="primary">Contraseña</ion-label>
+            <ion-input placeholder="Contraseña"></ion-input>
+          </ion-item>
+          <button ion-button (click)="showAlert()">Iniciar sesión</button>
+          <button ion-button outline (click)="showAlertRecuperar()">Recuperar contraseña</button>
+      </ion-card-content>    
+    </ion-card>
+    
+  </div>
+  <div class="accesos">
+    <div class="acceso">
+        <button ion-button round>
+          <ion-icon name="call"></ion-icon>
+        </button>
+    </div>
+    <div class="acceso">
+        <button ion-button round>
+          <ion-icon name="barcode"></ion-icon>
+        </button>
+    </div>
+    <div class="acceso">
+        <button ion-button round>
+          <ion-icon name="contacts"></ion-icon>
+        </button>
+    </div>
+    
+  </div>  
 </ion-content>
-
-
-
